deploy: 04230c0e558a6f4b06308dec544f967e771060fe

--- a/nodesnim/core/input.html
+++ b/nodesnim/core/input.html
@@ -264,6 +264,18 @@ function main() {
     title="K_END = 107"><wbr />K_<wbr />END<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#K_INSERT"
     title="K_INSERT = 108"><wbr />K_<wbr />INSERT<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_SHIFT"
+    title="K_SHIFT = 112"><wbr />K_<wbr />SHIFT<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_RIGHT_SHIFT"
+    title="K_RIGHT_SHIFT = 113"><wbr />K_<wbr />RIGHT_<wbr />SHIFT<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_CTRL"
+    title="K_CTRL = 114"><wbr />K_<wbr />CTRL<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_RIGHT_CTRL"
+    title="K_RIGHT_CTRL = 115"><wbr />K_<wbr />RIGHT_<wbr />CTRL<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_ALT"
+    title="K_ALT = 116"><wbr />K_<wbr />ALT<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#K_RIGHT_ALT"
+    title="K_RIGHT_ALT = 117"><wbr />K_<wbr />RIGHT_<wbr />ALT<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#K_DELETE"
     title="K_DELETE = 127"><wbr />K_<wbr />DELETE<span class="attachedType"></span></a></li>
 
@@ -797,6 +809,48 @@ function main() {
 
 
 </dd>
+<a id="K_SHIFT"></a>
+<dt><pre><a href="input.html#K_SHIFT"><span class="Identifier">K_SHIFT</span></a> <span class="Other">=</span> <span class="DecNumber">112</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="K_RIGHT_SHIFT"></a>
+<dt><pre><a href="input.html#K_RIGHT_SHIFT"><span class="Identifier">K_RIGHT_SHIFT</span></a> <span class="Other">=</span> <span class="DecNumber">113</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="K_CTRL"></a>
+<dt><pre><a href="input.html#K_CTRL"><span class="Identifier">K_CTRL</span></a> <span class="Other">=</span> <span class="DecNumber">114</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="K_RIGHT_CTRL"></a>
+<dt><pre><a href="input.html#K_RIGHT_CTRL"><span class="Identifier">K_RIGHT_CTRL</span></a> <span class="Other">=</span> <span class="DecNumber">115</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="K_ALT"></a>
+<dt><pre><a href="input.html#K_ALT"><span class="Identifier">K_ALT</span></a> <span class="Other">=</span> <span class="DecNumber">116</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="K_RIGHT_ALT"></a>
+<dt><pre><a href="input.html#K_RIGHT_ALT"><span class="Identifier">K_RIGHT_ALT</span></a> <span class="Other">=</span> <span class="DecNumber">117</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="K_DELETE"></a>
 <dt><pre><a href="input.html#K_DELETE"><span class="Identifier">K_DELETE</span></a> <span class="Other">=</span> <span class="DecNumber">127</span></pre></dt>
 <dd>
@@ -948,7 +1002,7 @@ Returns true, when <tt class="docutils literal"><span class="pre">a</span></tt> 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 17:05:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 02:57:24 UTC</small>
       </div>
     </div>
   </div>
