--- a/nodesnim/nodes2d/kinematic_body2d.html
+++ b/nodesnim/nodes2d/kinematic_body2d.html
@@ -263,7 +263,11 @@ Checks any collision and return <tt class="docutils literal"><span class="pre">t
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-Moves and checks collision
+<p>Moves and checks collision</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">vel</span></tt> is a velocity vector.</li>
+</ul>
+
 
 </dd>
 
@@ -276,7 +280,7 @@ Moves and checks collision
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 17:05:55 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 02:58:20 UTC</small>
       </div>
     </div>
   </div>
