--- a/nodesnim/core/image.html
+++ b/nodesnim/core/image.html
@@ -116,8 +116,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#load%2Ccstring%2CVector2Ref%2CGLenum"
-    title="load(file: cstring; size: var Vector2Ref; mode: GLenum = GL_RGB): GLuint"><wbr />load<span class="attachedType"></span></a></li>
+      <li><a class="reference" href="#load%2Ccstring%2Cfloat%2Cfloat%2CGLenum"
+    title="load(file: cstring; x, y: var float; mode: GLenum = GL_RGB): GLuint"><wbr />load<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#load%2Ccstring%2CGLenum"
     title="load(file: cstring; mode: GLenum = GL_RGB): GlTextureObj"><wbr />load<span class="attachedType">GlTextureObj</span></a></li>
 
@@ -154,8 +154,8 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="load,cstring,Vector2Ref,GLenum"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#load%2Ccstring%2CVector2Ref%2CGLenum"><span class="Identifier">load</span></a><span class="Other">(</span><span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">;</span> <span class="Identifier">size</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">;</span> <span class="Identifier">mode</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLenum"><span class="Identifier">GLenum</span></a> <span class="Other">=</span> <span class="Identifier">GL_RGB</span><span class="Other">)</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLuint"><span class="Identifier">GLuint</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="load,cstring,float,float,GLenum"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#load%2Ccstring%2Cfloat%2Cfloat%2CGLenum"><span class="Identifier">load</span></a><span class="Other">(</span><span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">float</span><span class="Other">;</span> <span class="Identifier">mode</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLenum"><span class="Identifier">GLenum</span></a> <span class="Other">=</span> <span class="Identifier">GL_RGB</span><span class="Other">)</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLuint"><span class="Identifier">GLuint</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -188,7 +188,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 02:57:25 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 03:41:00 UTC</small>
       </div>
     </div>
   </div>
