--- a/nodesnim/nodescontrol/slider.html
+++ b/nodesnim/nodescontrol/slider.html
@@ -110,7 +110,8 @@ function main() {
     title="SliderObj = object of ControlPtr
   max_value*, value*: uint
   progress_color*: ColorRef
-  thumb_color*: ColorRef"><wbr />Slider<wbr />Obj<span class="attachedType"></span></a></li>
+  thumb_color*: ColorRef
+  on_changed*: proc (new_value: uint): void"><wbr />Slider<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#SliderPtr"
     title="SliderPtr = ptr SliderObj"><wbr />Slider<wbr />Ptr<span class="attachedType"></span></a></li>
 
@@ -165,6 +166,7 @@ function main() {
   <span class="Identifier">max_value</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">value</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">uint</span>
   <span class="Identifier">progress_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">thumb_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
+  <span class="Identifier">on_changed</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">new_value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span>
 </pre></dt>
 <dd>
 
@@ -274,7 +276,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 09:35:37 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:05:22 UTC</small>
       </div>
     </div>
   </div>
