--- a/nodesnim/nodes/canvas.html
+++ b/nodesnim/nodes/canvas.html
@@ -133,10 +133,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Canvas%2Cstring%2CCanvasObj"
-    title="Canvas(name: string; variable: var CanvasObj): CanvasPtr"><wbr />Canvas<span class="attachedType">CanvasPtr</span></a></li>
-  <li><a class="reference" href="#Canvas%2CCanvasObj"
-    title="Canvas(variable: var CanvasObj): CanvasPtr"><wbr />Canvas<span class="attachedType">CanvasObj</span></a></li>
+      <li><a class="reference" href="#Canvas%2Cstring"
+    title="Canvas(name: string = &quot;Canvas&quot;): CanvasPtr"><wbr />Canvas<span class="attachedType">CanvasPtr</span></a></li>
 
   </ul>
 </li>
@@ -145,8 +143,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CCanvasPtr%2CGLfloat%2CGLfloat"
     title="draw(canvas: CanvasPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">CanvasPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CCanvasPtr%2CCanvasObj"
-    title="duplicate(self: CanvasPtr; obj: var CanvasObj): CanvasPtr"><wbr />duplicate<span class="attachedType">CanvasPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CCanvasPtr"
+    title="duplicate(self: CanvasPtr): CanvasPtr"><wbr />duplicate<span class="attachedType">CanvasPtr</span></a></li>
   <li><a class="reference" href="#circle.e%2CCanvasPtr%2CGLfloat%2CGLfloat%2CGLfloat%2CColorRef%2Cint"
     title="circle(canvas: CanvasPtr; x, y, radius: GLfloat; color: ColorRef; quality: int = 100)"><wbr />circle<span class="attachedType">CanvasPtr</span></a></li>
   <li><a class="reference" href="#point.e%2CCanvasPtr%2CGLfloat%2CGLfloat%2CColorRef"
@@ -229,35 +227,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Canvas,string,CanvasObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Canvas%2Cstring%2CCanvasObj"><span class="Identifier">Canvas</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="canvas.html#CanvasObj"><span class="Identifier">CanvasObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Canvas,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Canvas%2Cstring"><span class="Identifier">Canvas</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Canvas&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Canvas pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CanvasObj variable</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">canvas1_obj</span><span class="Other">:</span> <span class="Identifier">CanvasObj</span>
-  <span class="Identifier">canvas1</span> <span class="Other">=</span> <span class="Identifier">Canvas</span><span class="Other">(</span><span class="StringLit">&quot;Canvas&quot;</span><span class="Other">,</span> <span class="Identifier">canvas1_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Canvas,CanvasObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Canvas%2CCanvasObj"><span class="Identifier">Canvas</span></a><span class="Other">(</span><span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="canvas.html#CanvasObj"><span class="Identifier">CanvasObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Canvas pointer with default name &quot;Canvas&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CanvasObj variable</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">canvas1_obj</span><span class="Other">:</span> <span class="Identifier">CanvasObj</span>
-  <span class="Identifier">canvas1</span> <span class="Other">=</span> <span class="Identifier">Canvas</span><span class="Other">(</span><span class="Identifier">canvas1_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">canvas1</span> <span class="Other">=</span> <span class="Identifier">Canvas</span><span class="Other">(</span><span class="StringLit">&quot;Canvas&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -272,9 +252,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,CanvasPtr,CanvasObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCanvasPtr%2CCanvasObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="canvas.html#CanvasObj"><span class="Identifier">CanvasObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,CanvasPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCanvasPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="canvas.html#CanvasPtr"><span class="Identifier">CanvasPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Canvas object and create a new Canvas pointer.
@@ -371,7 +350,7 @@ Fills canvas.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:08 UTC</small>
       </div>
     </div>
   </div>
