--- a/nodesnim/nodes/scene.html
+++ b/nodesnim/nodes/scene.html
@@ -116,10 +116,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Scene%2Cstring%2CSceneObj"
-    title="Scene(name: string; variable: var SceneObj): ScenePtr"><wbr />Scene<span class="attachedType">ScenePtr</span></a></li>
-  <li><a class="reference" href="#Scene%2CSceneObj"
-    title="Scene(variable: var SceneObj): ScenePtr"><wbr />Scene<span class="attachedType">ScenePtr</span></a></li>
+      <li><a class="reference" href="#Scene%2Cstring"
+    title="Scene(name: string = &quot;Scene&quot;): ScenePtr"><wbr />Scene<span class="attachedType">ScenePtr</span></a></li>
 
   </ul>
 </li>
@@ -128,8 +126,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#drawScene.e%2CScenePtr%2CGLfloat%2CGLfloat%2Cbool"
     title="drawScene(scene: ScenePtr; w, h: GLfloat; paused: bool)"><wbr />draw<wbr />Scene<span class="attachedType">ScenePtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CScenePtr%2CSceneObj"
-    title="duplicate(self: ScenePtr; obj: var SceneObj): ScenePtr"><wbr />duplicate<span class="attachedType">ScenePtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CScenePtr"
+    title="duplicate(self: ScenePtr): ScenePtr"><wbr />duplicate<span class="attachedType">ScenePtr</span></a></li>
   <li><a class="reference" href="#enter.e%2CScenePtr"
     title="enter(scene: ScenePtr)"><wbr />enter<span class="attachedType">ScenePtr</span></a></li>
   <li><a class="reference" href="#exit.e%2CScenePtr"
@@ -176,25 +174,13 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Scene,string,SceneObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Scene%2Cstring%2CSceneObj"><span class="Identifier">Scene</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Scene,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Scene%2Cstring"><span class="Identifier">Scene</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Scene&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Scene pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a scene name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SceneObj object.</li>
-</ul>
-
-
-</dd>
-<a id="Scene,SceneObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Scene%2CSceneObj"><span class="Identifier">Scene</span></a><span class="Other">(</span><span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Scene pointer with default scene name &quot;Scene&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SceneObj object.</li>
 </ul>
 
 
@@ -212,8 +198,8 @@ function main() {
 Draws scene This used in the window.nim.
 
 </dd>
-<a id="duplicate.e,ScenePtr,SceneObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CScenePtr%2CSceneObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,ScenePtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CScenePtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Scene object and create a new Scene pointer.
@@ -259,7 +245,7 @@ Recalculates node positions.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:04 UTC</small>
       </div>
     </div>
   </div>
