--- a/nodesnim/nodes2d/animated_sprite.html
+++ b/nodesnim/nodes2d/animated_sprite.html
@@ -120,10 +120,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#AnimatedSprite%2Cstring%2CAnimatedSpriteObj"
-    title="AnimatedSprite(name: string; variable: var AnimatedSpriteObj): AnimatedSpritePtr"><wbr />Animated<wbr />Sprite<span class="attachedType">AnimatedSpritePtr</span></a></li>
-  <li><a class="reference" href="#AnimatedSprite%2CAnimatedSpriteObj"
-    title="AnimatedSprite(obj: var AnimatedSpriteObj): AnimatedSpritePtr"><wbr />Animated<wbr />Sprite<span class="attachedType">AnimatedSpriteObj</span></a></li>
+      <li><a class="reference" href="#AnimatedSprite%2Cstring"
+    title="AnimatedSprite(name: string = &quot;AnimatedSprite&quot;): AnimatedSpritePtr"><wbr />Animated<wbr />Sprite<span class="attachedType">AnimatedSpritePtr</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +130,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CAnimatedSpritePtr%2CGLfloat%2CGLfloat"
     title="draw(self: AnimatedSpritePtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">AnimatedSpritePtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CAnimatedSpritePtr%2CAnimatedSpriteObj"
-    title="duplicate(self: AnimatedSpritePtr; obj: var AnimatedSpriteObj): AnimatedSpritePtr"><wbr />duplicate<span class="attachedType">AnimatedSpritePtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CAnimatedSpritePtr"
+    title="duplicate(self: AnimatedSpritePtr): AnimatedSpritePtr"><wbr />duplicate<span class="attachedType">AnimatedSpritePtr</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CAnimatedSpritePtr"
     title="getGlobalMousePosition(self: AnimatedSpritePtr): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">AnimatedSpritePtr</span></a></li>
   <li><a class="reference" href="#addAnimation.e%2CAnimatedSpritePtr%2Cstring%2Cfloat"
@@ -193,37 +191,18 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="AnimatedSprite,string,AnimatedSpriteObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#AnimatedSprite%2Cstring%2CAnimatedSpriteObj"><span class="Identifier">AnimatedSprite</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="animated_sprite.html#AnimatedSpriteObj"><span class="Identifier">AnimatedSpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="AnimatedSprite,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#AnimatedSprite%2Cstring"><span class="Identifier">AnimatedSprite</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;AnimatedSprite&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new AnimatedSprite pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a AnimatedSpriteObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">AnimatedSpriteObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">AnimatedSprite</span><span class="Other">(</span><span class="StringLit">&quot;AnimatedSprite&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="AnimatedSprite,AnimatedSpriteObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#AnimatedSprite%2CAnimatedSpriteObj"><span class="Identifier">AnimatedSprite</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="animated_sprite.html#AnimatedSpriteObj"><span class="Identifier">AnimatedSpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new AnimatedSprite pointer with default node name &quot;AnimatedSprite&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a AnimatedSpriteObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">AnimatedSpriteObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">AnimatedSprite</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">AnimatedSprite</span><span class="Other">(</span><span class="StringLit">&quot;AnimatedSprite&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -238,9 +217,9 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,AnimatedSpritePtr,AnimatedSpriteObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CAnimatedSpritePtr%2CAnimatedSpriteObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="animated_sprite.html#AnimatedSpriteObj"><span class="Identifier">AnimatedSpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,AnimatedSpritePtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CAnimatedSpritePtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpritePtr"><span class="Identifier">AnimatedSpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates AnimatedSprite object and create a new AnimatedSprite pointer.
@@ -341,7 +320,7 @@ Resumes animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:51 UTC</small>
       </div>
     </div>
   </div>
