--- a/nodesnim/nodes2d/collision_shape2d.html
+++ b/nodesnim/nodes2d/collision_shape2d.html
@@ -124,10 +124,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#CollisionShape2D%2Cstring%2CCollisionShape2DObj"
-    title="CollisionShape2D(name: string; variable: var CollisionShape2DObj): CollisionShape2DPtr"><wbr />Collision<wbr />Shape2D<span class="attachedType">CollisionShape2DPtr</span></a></li>
-  <li><a class="reference" href="#CollisionShape2D%2CCollisionShape2DObj"
-    title="CollisionShape2D(obj: var CollisionShape2DObj): CollisionShape2DPtr"><wbr />Collision<wbr />Shape2D<span class="attachedType">CollisionShape2DObj</span></a></li>
+      <li><a class="reference" href="#CollisionShape2D%2Cstring"
+    title="CollisionShape2D(name: string = &quot;CollisionShape2D&quot;): CollisionShape2DPtr"><wbr />Collision<wbr />Shape2D<span class="attachedType">CollisionShape2DPtr</span></a></li>
 
   </ul>
 </li>
@@ -142,8 +140,8 @@ function main() {
     title="setShapeTypePolygon(self: CollisionShape2DPtr; positions: varargs[Vector2Ref])"><wbr />set<wbr />Shape<wbr />Type<wbr />Polygon<span class="attachedType">CollisionShape2DPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CCollisionShape2DPtr%2CGLfloat%2CGLfloat"
     title="draw(self: CollisionShape2DPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">CollisionShape2DPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CCollisionShape2DPtr%2CCollisionShape2DObj"
-    title="duplicate(self: CollisionShape2DPtr; obj: var CollisionShape2DObj): CollisionShape2DPtr"><wbr />duplicate<span class="attachedType">CollisionShape2DPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CCollisionShape2DPtr"
+    title="duplicate(self: CollisionShape2DPtr): CollisionShape2DPtr"><wbr />duplicate<span class="attachedType">CollisionShape2DPtr</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CCollisionShape2DPtr"
     title="getGlobalMousePosition(self: CollisionShape2DPtr): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">CollisionShape2DPtr</span></a></li>
   <li><a class="reference" href="#isCollide.e%2CCollisionShape2DPtr%2Cfloat%2Cfloat"
@@ -204,37 +202,18 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="CollisionShape2D,string,CollisionShape2DObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#CollisionShape2D%2Cstring%2CCollisionShape2DObj"><span class="Identifier">CollisionShape2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="collision_shape2d.html#CollisionShape2DObj"><span class="Identifier">CollisionShape2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="CollisionShape2D,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#CollisionShape2D%2Cstring"><span class="Identifier">CollisionShape2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;CollisionShape2D&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new CollisionShape2D pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CollisionShape2DObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">CollisionShape2DObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">CollisionShape2D</span><span class="Other">(</span><span class="StringLit">&quot;CollisionShape2D&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="CollisionShape2D,CollisionShape2DObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#CollisionShape2D%2CCollisionShape2DObj"><span class="Identifier">CollisionShape2D</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="collision_shape2d.html#CollisionShape2DObj"><span class="Identifier">CollisionShape2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new CollisionShape2D pointer with deffault node name &quot;CollisionShape2D&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CollisionShape2DObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">CollisionShape2DObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">CollisionShape2D</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">CollisionShape2D</span><span class="Other">(</span><span class="StringLit">&quot;CollisionShape2D&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -283,9 +262,9 @@ Changes shape type to <tt class="docutils literal"><span class="pre">circle</spa
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,CollisionShape2DPtr,CollisionShape2DObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCollisionShape2DPtr%2CCollisionShape2DObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="collision_shape2d.html#CollisionShape2DObj"><span class="Identifier">CollisionShape2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,CollisionShape2DPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCollisionShape2DPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="collision_shape2d.html#CollisionShape2DPtr"><span class="Identifier">CollisionShape2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates CollisionShape2D object and create a new CollisionShape2D pointer.
@@ -336,7 +315,7 @@ Checks collision with other CollisionShape2D object.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:50 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:55 UTC</small>
       </div>
     </div>
   </div>
