--- a/nodesnim/nodes2d/sprite.html
+++ b/nodesnim/nodes2d/sprite.html
@@ -118,10 +118,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Sprite%2Cstring%2CSpriteObj"
-    title="Sprite(name: string; variable: var SpriteObj): SpritePtr"><wbr />Sprite<span class="attachedType">SpritePtr</span></a></li>
-  <li><a class="reference" href="#Sprite%2CSpriteObj"
-    title="Sprite(obj: var SpriteObj): SpritePtr"><wbr />Sprite<span class="attachedType">SpriteObj</span></a></li>
+      <li><a class="reference" href="#Sprite%2Cstring"
+    title="Sprite(name: string = &quot;Sprite&quot;): SpritePtr"><wbr />Sprite<span class="attachedType">SpritePtr</span></a></li>
 
   </ul>
 </li>
@@ -130,8 +128,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CSpritePtr%2CGLfloat%2CGLfloat"
     title="draw(self: SpritePtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">SpritePtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CSpritePtr%2CSpriteObj"
-    title="duplicate(self: SpritePtr; obj: var SpriteObj): SpritePtr"><wbr />duplicate<span class="attachedType">SpritePtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CSpritePtr"
+    title="duplicate(self: SpritePtr): SpritePtr"><wbr />duplicate<span class="attachedType">SpritePtr</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CSpritePtr"
     title="getGlobalMousePosition(self: SpritePtr): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">SpritePtr</span></a></li>
   <li><a class="reference" href="#loadTexture.e%2CSpritePtr%2Ccstring"
@@ -179,35 +177,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Sprite,string,SpriteObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Sprite%2Cstring%2CSpriteObj"><span class="Identifier">Sprite</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="sprite.html#SpriteObj"><span class="Identifier">SpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Sprite,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Sprite%2Cstring"><span class="Identifier">Sprite</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Sprite&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Sprite pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SpriteObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">SpriteObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Sprite</span><span class="Other">(</span><span class="StringLit">&quot;Sprite&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Sprite,SpriteObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Sprite%2CSpriteObj"><span class="Identifier">Sprite</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="sprite.html#SpriteObj"><span class="Identifier">SpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Sprite pointer with deffault node name &quot;Sprite&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SpriteObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">SpriteObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Sprite</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Sprite</span><span class="Other">(</span><span class="StringLit">&quot;Sprite&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -222,9 +202,8 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,SpritePtr,SpriteObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSpritePtr%2CSpriteObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="sprite.html#SpriteObj"><span class="Identifier">SpriteObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,SpritePtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSpritePtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="sprite.html#SpritePtr"><span class="Identifier">SpritePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Sprite object and create a new Sprite pointer.
@@ -272,7 +251,7 @@ Returns mouse position.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:45 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:49 UTC</small>
       </div>
     </div>
   </div>
