--- a/nodesnim/nodes2d/ysort.html
+++ b/nodesnim/nodes2d/ysort.html
@@ -117,10 +117,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#YSort%2Cstring%2CYSortObj"
-    title="YSort(name: string; variable: var YSortObj): YSortPtr"><wbr />YSort<span class="attachedType">YSortPtr</span></a></li>
-  <li><a class="reference" href="#YSort%2CYSortObj"
-    title="YSort(obj: var YSortObj): YSortPtr"><wbr />YSort<span class="attachedType">YSortObj</span></a></li>
+      <li><a class="reference" href="#YSort%2Cstring"
+    title="YSort(name: string = &quot;YSort&quot;): YSortPtr"><wbr />YSort<span class="attachedType">YSortPtr</span></a></li>
 
   </ul>
 </li>
@@ -129,6 +127,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CYSortPtr%2CGLfloat%2CGLfloat"
     title="draw(self: YSortPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">YSortPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CYSortPtr"
+    title="duplicate(self: YSortPtr): YSortPtr"><wbr />duplicate<span class="attachedType">YSortPtr</span></a></li>
 
   </ul>
 </li>
@@ -169,35 +169,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="YSort,string,YSortObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2Cstring%2CYSortObj"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="YSort,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2Cstring"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;YSort&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new YSort pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a YSortObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">YSortObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="StringLit">&quot;YSort&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="YSort,YSortObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2CYSortObj"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new YSort pointer with deffault node name &quot;YSort&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a YSortObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">YSortObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="StringLit">&quot;YSort&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -212,6 +194,13 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
+<a id="duplicate.e,YSortPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CYSortPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Duplicates YSort object and create a new YSort pointer.
+
+</dd>
 
 </dl></div>
 
@@ -222,7 +211,7 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:49 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:53 UTC</small>
       </div>
     </div>
   </div>
