--- a/nodesnim/nodescontrol/box.html
+++ b/nodesnim/nodescontrol/box.html
@@ -117,10 +117,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Box%2Cstring%2CBoxObj"
-    title="Box(name: string; variable: var BoxObj): BoxPtr"><wbr />Box<span class="attachedType">BoxPtr</span></a></li>
-  <li><a class="reference" href="#Box%2CBoxObj"
-    title="Box(obj: var BoxObj): BoxPtr"><wbr />Box<span class="attachedType">BoxObj</span></a></li>
+      <li><a class="reference" href="#Box%2Cstring"
+    title="Box(name: string = &quot;Box&quot;): BoxPtr"><wbr />Box<span class="attachedType">BoxPtr</span></a></li>
 
   </ul>
 </li>
@@ -133,8 +131,8 @@ function main() {
     title="addChild(self: BoxPtr; child: NodePtr)"><wbr />add<wbr />Child<span class="attachedType">BoxPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CBoxPtr%2CGLfloat%2CGLfloat"
     title="draw(self: BoxPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">BoxPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CBoxPtr%2CBoxObj"
-    title="duplicate(self: BoxPtr; obj: var BoxObj): BoxPtr"><wbr />duplicate<span class="attachedType">BoxPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CBoxPtr"
+    title="duplicate(self: BoxPtr): BoxPtr"><wbr />duplicate<span class="attachedType">BoxPtr</span></a></li>
   <li><a class="reference" href="#resize.e%2CBoxPtr%2CGLfloat%2CGLfloat"
     title="resize(self: BoxPtr; w, h: GLfloat)"><wbr />resize<span class="attachedType">BoxPtr</span></a></li>
   <li><a class="reference" href="#setChildAnchor.e%2CBoxPtr%2CAnchorRef"
@@ -181,35 +179,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Box,string,BoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Box%2Cstring%2CBoxObj"><span class="Identifier">Box</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="box.html#BoxObj"><span class="Identifier">BoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Box,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Box%2Cstring"><span class="Identifier">Box</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Box&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Box pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a BoxObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">box1_obj</span><span class="Other">:</span> <span class="Identifier">BoxObj</span>
-  <span class="Identifier">box1</span> <span class="Other">=</span> <span class="Identifier">Box</span><span class="Other">(</span><span class="StringLit">&quot;My box&quot;</span><span class="Other">,</span> <span class="Identifier">box1_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Box,BoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Box%2CBoxObj"><span class="Identifier">Box</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="box.html#BoxObj"><span class="Identifier">BoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Box pointer with default name &quot;Box&quot;</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">obj</span></tt> is a BoxObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">box1_obj</span><span class="Other">:</span> <span class="Identifier">BoxObj</span>
-  <span class="Identifier">box1</span> <span class="Other">=</span> <span class="Identifier">Box</span><span class="Other">(</span><span class="Identifier">box1_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">box1</span> <span class="Other">=</span> <span class="Identifier">Box</span><span class="Other">(</span><span class="StringLit">&quot;My box&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -243,15 +223,11 @@ Returns Vector2 of the minimal size of the box pointer.
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,BoxPtr,BoxObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CBoxPtr%2CBoxObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="box.html#BoxObj"><span class="Identifier">BoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,BoxPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CBoxPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-<p>Duplicates Box pointer.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">obj</span></tt> is BoxObj variable.</li>
-</ul>
-
+Duplicates Box pointer. 
 
 </dd>
 <a id="resize.e,BoxPtr,GLfloat,GLfloat"></a>
@@ -299,7 +275,7 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:19 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:20 UTC</small>
       </div>
     </div>
   </div>
