--- a/nodesnim/nodescontrol/color_rect.html
+++ b/nodesnim/nodescontrol/color_rect.html
@@ -117,10 +117,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#ColorRect%2Cstring%2CColorRectObj"
-    title="ColorRect(name: string; variable: var ColorRectObj): ColorRectPtr"><wbr />Color<wbr />Rect<span class="attachedType">ColorRectPtr</span></a></li>
-  <li><a class="reference" href="#ColorRect%2CColorRectObj"
-    title="ColorRect(obj: var ColorRectObj): ColorRectPtr"><wbr />Color<wbr />Rect<span class="attachedType">ColorRectObj</span></a></li>
+      <li><a class="reference" href="#ColorRect%2Cstring"
+    title="ColorRect(name: string = &quot;ColorRect&quot;): ColorRectPtr"><wbr />Color<wbr />Rect<span class="attachedType">ColorRectPtr</span></a></li>
 
   </ul>
 </li>
@@ -129,8 +127,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CColorRectPtr%2CGLfloat%2CGLfloat"
     title="draw(self: ColorRectPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">ColorRectPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CColorRectPtr%2CColorRectObj"
-    title="duplicate(self: ColorRectPtr; obj: var ColorRectObj): ColorRectPtr"><wbr />duplicate<span class="attachedType">ColorRectPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CColorRectPtr"
+    title="duplicate(self: ColorRectPtr): ColorRectPtr"><wbr />duplicate<span class="attachedType">ColorRectPtr</span></a></li>
 
   </ul>
 </li>
@@ -171,36 +169,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="ColorRect,string,ColorRectObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#ColorRect%2Cstring%2CColorRectObj"><span class="Identifier">ColorRect</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="color_rect.html#ColorRectObj"><span class="Identifier">ColorRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="ColorRect,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#ColorRect%2Cstring"><span class="Identifier">ColorRect</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;ColorRect&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new ColorRect pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ColorRectObj variable</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">colorrect1_obj</span><span class="Other">:</span> <span class="Identifier">ColorRectObj</span>
-  <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">ColorRect</span><span class="Other">(</span><span class="StringLit">&quot;ColorRect&quot;</span><span class="Other">,</span> <span class="Identifier">colorrect1_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="ColorRect,ColorRectObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#ColorRect%2CColorRectObj"><span class="Identifier">ColorRect</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="color_rect.html#ColorRectObj"><span class="Identifier">ColorRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new ColorRect pointer with default node name &quot;ColorRect&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ColorRectObj variable</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">colorrect1_obj</span><span class="Other">:</span> <span class="Identifier">ColorRectObj</span>
-  <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">ColorRect</span><span class="Other">(</span><span class="Identifier">colorrect1_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">ColorRect</span><span class="Other">(</span><span class="StringLit">&quot;ColorRect&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -216,9 +195,8 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,ColorRectPtr,ColorRectObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CColorRectPtr%2CColorRectObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="color_rect.html#ColorRectObj"><span class="Identifier">ColorRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,ColorRectPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CColorRectPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="color_rect.html#ColorRectPtr"><span class="Identifier">ColorRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates ColorRect object and create a new ColorRect pointer.
@@ -234,7 +212,7 @@ Duplicates ColorRect object and create a new ColorRect pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:14 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:13 UTC</small>
       </div>
     </div>
   </div>
