--- a/nodesnim/nodescontrol/control.html
+++ b/nodesnim/nodescontrol/control.html
@@ -128,10 +128,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Control%2Cstring%2CControlObj"
-    title="Control(name: string; variable: var ControlObj): ControlPtr"><wbr />Control<span class="attachedType">ControlPtr</span></a></li>
-  <li><a class="reference" href="#Control%2CControlObj"
-    title="Control(obj: var ControlObj): ControlPtr"><wbr />Control<span class="attachedType">ControlObj</span></a></li>
+      <li><a class="reference" href="#Control%2Cstring"
+    title="Control(name: string = &quot;Control&quot;): ControlPtr"><wbr />Control<span class="attachedType">ControlPtr</span></a></li>
 
   </ul>
 </li>
@@ -142,8 +140,8 @@ function main() {
     title="calcPositionAnchor(self: ControlPtr)"><wbr />calc<wbr />Position<wbr />Anchor<span class="attachedType">ControlPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CControlPtr%2CGLfloat%2CGLfloat"
     title="draw(self: ControlPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">ControlPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CControlPtr%2CControlObj"
-    title="duplicate(self: ControlPtr; obj: var ControlObj): ControlPtr"><wbr />duplicate<span class="attachedType">ControlPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CControlPtr"
+    title="duplicate(self: ControlPtr): ControlPtr"><wbr />duplicate<span class="attachedType">ControlPtr</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CControlPtr"
     title="getGlobalMousePosition(self: ControlPtr): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">ControlPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CControlPtr%2CInputEvent%2CNodePtr"
@@ -209,35 +207,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Control,string,ControlObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Control%2Cstring%2CControlObj"><span class="Identifier">Control</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="control.html#ControlObj"><span class="Identifier">ControlObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Control,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Control%2Cstring"><span class="Identifier">Control</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Control&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Control pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ControlObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">ctrl_obj</span><span class="Other">:</span> <span class="Identifier">ControlObj</span>
-  <span class="Identifier">ctrl</span> <span class="Other">=</span> <span class="Identifier">Control</span><span class="Other">(</span><span class="StringLit">&quot;Control&quot;</span><span class="Other">,</span> <span class="Identifier">ctrl_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Control,ControlObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Control%2CControlObj"><span class="Identifier">Control</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="control.html#ControlObj"><span class="Identifier">ControlObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Control pointer with deffault node name &quot;Control&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ControlObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">ctrl_obj</span><span class="Other">:</span> <span class="Identifier">ControlObj</span>
-  <span class="Identifier">ctrl</span> <span class="Other">=</span> <span class="Identifier">Control</span><span class="Other">(</span><span class="Identifier">ctrl_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">ctrl</span> <span class="Other">=</span> <span class="Identifier">Control</span><span class="Other">(</span><span class="StringLit">&quot;Control&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -260,9 +240,8 @@ Calculates node position. This uses in the <tt class="docutils literal"><span cl
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,ControlPtr,ControlObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CControlPtr%2CControlObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="control.html#ControlObj"><span class="Identifier">ControlObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,ControlPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CControlPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="control.html#ControlPtr"><span class="Identifier">ControlPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Control object and create a new Control pointer.
@@ -314,7 +293,7 @@ Changes Control background color.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:13 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:12 UTC</small>
       </div>
     </div>
   </div>
