--- a/nodesnim/nodescontrol/counter.html
+++ b/nodesnim/nodescontrol/counter.html
@@ -110,8 +110,7 @@ function main() {
     title="CounterObj = object of ControlPtr
   as_int*: bool                ## if true, then use integer representation.
   min_value*, value*, max_value*: float
-  label*: LabelPtr
-  label_obj*: LabelObj"><wbr />Counter<wbr />Obj<span class="attachedType"></span></a></li>
+  label*: LabelPtr"><wbr />Counter<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#CounterPtr"
     title="CounterPtr = ptr CounterObj"><wbr />Counter<wbr />Ptr<span class="attachedType"></span></a></li>
 
@@ -120,10 +119,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Counter%2Cstring%2CCounterObj"
-    title="Counter(name: string; variable: var CounterObj): CounterPtr"><wbr />Counter<span class="attachedType">CounterPtr</span></a></li>
-  <li><a class="reference" href="#Counter%2CCounterObj"
-    title="Counter(obj: var CounterObj): CounterPtr"><wbr />Counter<span class="attachedType">CounterObj</span></a></li>
+      <li><a class="reference" href="#Counter%2Cstring"
+    title="Counter(name: string = &quot;Counter&quot;): CounterPtr"><wbr />Counter<span class="attachedType">CounterPtr</span></a></li>
 
   </ul>
 </li>
@@ -134,8 +131,8 @@ function main() {
     title="changeValue(self: CounterPtr; value: float)"><wbr />change<wbr />Value<span class="attachedType">CounterPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CCounterPtr%2CGLfloat%2CGLfloat"
     title="draw(self: CounterPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">CounterPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CCounterPtr%2CCounterObj"
-    title="duplicate(self: CounterPtr; obj: var CounterObj): CounterPtr"><wbr />duplicate<span class="attachedType">CounterPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CCounterPtr"
+    title="duplicate(self: CounterPtr): CounterPtr"><wbr />duplicate<span class="attachedType">CounterPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CCounterPtr%2CInputEvent%2CNodePtr"
     title="handle(self: CounterPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">CounterPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CCounterPtr%2Cfloat"
@@ -166,7 +163,6 @@ function main() {
   <span class="Identifier">as_int</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>                <span class="Comment">## if true, then use integer representation.</span>
   <span class="Identifier">min_value</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">value</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">max_value</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
   <span class="Identifier">label</span><span class="Operator">*</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a>
-  <span class="Identifier">label_obj</span><span class="Operator">*</span><span class="Other">:</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a>
 </pre></dt>
 <dd>
 
@@ -185,35 +181,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Counter,string,CounterObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Counter%2Cstring%2CCounterObj"><span class="Identifier">Counter</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="counter.html#CounterObj"><span class="Identifier">CounterObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Counter,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Counter%2Cstring"><span class="Identifier">Counter</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Counter&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Counter pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CounterObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">cobj</span><span class="Other">:</span> <span class="Identifier">CounterObj</span>
-  <span class="Identifier">c</span> <span class="Other">=</span> <span class="Identifier">Counter</span><span class="Other">(</span><span class="StringLit">&quot;Counter&quot;</span><span class="Other">,</span> <span class="Identifier">cobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Counter,CounterObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Counter%2CCounterObj"><span class="Identifier">Counter</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="counter.html#CounterObj"><span class="Identifier">CounterObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Counterpointer with default node name &quot;Counter&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a CounterObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">cobj</span><span class="Other">:</span> <span class="Identifier">CounterObj</span>
-  <span class="Identifier">c</span> <span class="Other">=</span> <span class="Identifier">Counter</span><span class="Other">(</span><span class="Identifier">cobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">c</span> <span class="Other">=</span> <span class="Identifier">Counter</span><span class="Other">(</span><span class="StringLit">&quot;Counter&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -236,9 +214,8 @@ Changes value, if it more than <tt class="docutils literal"><span class="pre">mi
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,CounterPtr,CounterObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCounterPtr%2CCounterObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="counter.html#CounterObj"><span class="Identifier">CounterObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,CounterPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CCounterPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="counter.html#CounterPtr"><span class="Identifier">CounterPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Counter object and create a new Counter pointer.
@@ -276,7 +253,7 @@ Changes max value, if it less then current <tt class="docutils literal"><span cl
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:44 UTC</small>
       </div>
     </div>
   </div>
