--- a/nodesnim/nodescontrol/edittext.html
+++ b/nodesnim/nodescontrol/edittext.html
@@ -130,10 +130,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#EditText%2Cstring%2CEditTextObj"
-    title="EditText(name: string; variable: var EditTextObj): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#EditText%2CEditTextObj"
-    title="EditText(obj: var EditTextObj): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextObj</span></a></li>
+      <li><a class="reference" href="#EditText%2Cstring"
+    title="EditText(name: string = &quot;EditText&quot;): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
 
   </ul>
 </li>
@@ -154,8 +152,8 @@ function main() {
     title="getWordUnderMouse(self: EditTextPtr): string"><wbr />get<wbr />Word<wbr />Under<wbr />Mouse<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CEditTextPtr%2CGLfloat%2CGLfloat"
     title="draw(self: EditTextPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CEditTextPtr%2CEditTextObj"
-    title="duplicate(self: EditTextPtr; obj: var EditTextObj): EditTextPtr"><wbr />duplicate<span class="attachedType">EditTextPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CEditTextPtr"
+    title="duplicate(self: EditTextPtr): EditTextPtr"><wbr />duplicate<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CEditTextPtr%2CInputEvent%2CNodePtr"
     title="handle(self: EditTextPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CEditTextPtr%2CAnchorRef"
@@ -217,37 +215,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="EditText,string,EditTextObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2Cstring%2CEditTextObj"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="EditText,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2Cstring"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;EditText&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new EditText pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a EditTextObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">editobj</span><span class="Other">:</span> <span class="Identifier">EditTextObj</span>
-  <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="StringLit">&quot;EditText&quot;</span><span class="Other">,</span> <span class="Identifier">editobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="EditText,EditTextObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2CEditTextObj"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new EditText pointer with default name &quot;EditText&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a EditTextObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">editobj</span><span class="Other">:</span> <span class="Identifier">EditTextObj</span>
-  <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="Identifier">editobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="StringLit">&quot;EditText&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -306,9 +284,8 @@ Returns words under mouse.
 This method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>
 
 </dd>
-<a id="duplicate.e,EditTextPtr,EditTextObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CEditTextPtr%2CEditTextObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,EditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CEditTextPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates EditText object and create a new EditText pointer.
@@ -353,7 +330,7 @@ Changes EditText text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:25 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:26 UTC</small>
       </div>
     </div>
   </div>
