--- a/nodesnim/nodescontrol/hbox.html
+++ b/nodesnim/nodescontrol/hbox.html
@@ -117,10 +117,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#HBox%2Cstring%2CHBoxObj"
-    title="HBox(name: string; variable: var HBoxObj): HBoxPtr"><wbr />HBox<span class="attachedType">HBoxPtr</span></a></li>
-  <li><a class="reference" href="#HBox%2CHBoxObj"
-    title="HBox(obj: var HBoxObj): HBoxPtr"><wbr />HBox<span class="attachedType">HBoxObj</span></a></li>
+      <li><a class="reference" href="#HBox%2Cstring"
+    title="HBox(name: string = &quot;HBox&quot;): HBoxPtr"><wbr />HBox<span class="attachedType">HBoxPtr</span></a></li>
 
   </ul>
 </li>
@@ -133,8 +131,8 @@ function main() {
     title="addChild(self: HBoxPtr; child: NodePtr)"><wbr />add<wbr />Child<span class="attachedType">HBoxPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CHBoxPtr%2CGLfloat%2CGLfloat"
     title="draw(self: HBoxPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">HBoxPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CHBoxPtr%2CHBoxObj"
-    title="duplicate(self: HBoxPtr; obj: var HBoxObj): HBoxPtr"><wbr />duplicate<span class="attachedType">HBoxPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CHBoxPtr"
+    title="duplicate(self: HBoxPtr): HBoxPtr"><wbr />duplicate<span class="attachedType">HBoxPtr</span></a></li>
   <li><a class="reference" href="#resize.e%2CHBoxPtr%2CGLfloat%2CGLfloat"
     title="resize(self: HBoxPtr; w, h: GLfloat)"><wbr />resize<span class="attachedType">HBoxPtr</span></a></li>
 
@@ -177,35 +175,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="HBox,string,HBoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#HBox%2Cstring%2CHBoxObj"><span class="Identifier">HBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="hbox.html#HBoxObj"><span class="Identifier">HBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="HBox,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#HBox%2Cstring"><span class="Identifier">HBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;HBox&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new HBox pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a HBoxObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">gridobj</span><span class="Other">:</span> <span class="Identifier">HBoxObj</span>
-  <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">HBox</span><span class="Other">(</span><span class="StringLit">&quot;HBox&quot;</span><span class="Other">,</span> <span class="Identifier">gridobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="HBox,HBoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#HBox%2CHBoxObj"><span class="Identifier">HBox</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="hbox.html#HBoxObj"><span class="Identifier">HBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new HBox pointer with default node name &quot;HBox&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a HBoxObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">gridobj</span><span class="Other">:</span> <span class="Identifier">HBoxObj</span>
-  <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">HBox</span><span class="Other">(</span><span class="Identifier">gridobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">HBox</span><span class="Other">(</span><span class="StringLit">&quot;HBox&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -239,8 +219,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,HBoxPtr,HBoxObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CHBoxPtr%2CHBoxObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="hbox.html#HBoxObj"><span class="Identifier">HBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,HBoxPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CHBoxPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="hbox.html#HBoxPtr"><span class="Identifier">HBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates HBox object and create a new HBox pointer.
@@ -268,7 +248,7 @@ Duplicates HBox object and create a new HBox pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:22 UTC</small>
       </div>
     </div>
   </div>
