--- a/nodesnim/nodescontrol/rich_edit_text.html
+++ b/nodesnim/nodescontrol/rich_edit_text.html
@@ -128,10 +128,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#RichEditText%2Cstring%2CRichEditTextObj"
-    title="RichEditText(name: string; variable: var RichEditTextObj): RichEditTextPtr"><wbr />Rich<wbr />Edit<wbr />Text<span class="attachedType">RichEditTextPtr</span></a></li>
-  <li><a class="reference" href="#RichEditText%2CRichEditTextObj"
-    title="RichEditText(obj: var RichEditTextObj): RichEditTextPtr"><wbr />Rich<wbr />Edit<wbr />Text<span class="attachedType">RichEditTextObj</span></a></li>
+      <li><a class="reference" href="#RichEditText%2Cstring"
+    title="RichEditText(name: string = &quot;RichEditText&quot;): RichEditTextPtr"><wbr />Rich<wbr />Edit<wbr />Text<span class="attachedType">RichEditTextPtr</span></a></li>
 
   </ul>
 </li>
@@ -152,8 +150,8 @@ function main() {
     title="getWordUnderMouse(self: RichEditTextPtr): ColorTextRef"><wbr />get<wbr />Word<wbr />Under<wbr />Mouse<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"
     title="draw(self: RichEditTextPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">RichEditTextPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CRichEditTextPtr%2CRichEditTextObj"
-    title="duplicate(self: RichEditTextPtr; obj: var RichEditTextObj): RichEditTextPtr"><wbr />duplicate<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CRichEditTextPtr"
+    title="duplicate(self: RichEditTextPtr): RichEditTextPtr"><wbr />duplicate<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CRichEditTextPtr%2CInputEvent%2CNodePtr"
     title="handle(self: RichEditTextPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichEditTextPtr%2CAnchorRef"
@@ -213,37 +211,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="RichEditText,string,RichEditTextObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#RichEditText%2Cstring%2CRichEditTextObj"><span class="Identifier">RichEditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_edit_text.html#RichEditTextObj"><span class="Identifier">RichEditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="RichEditText,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#RichEditText%2Cstring"><span class="Identifier">RichEditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;RichEditText&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new RichEditText pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichEditTextObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichEditTextObj</span>
-  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichEditText</span><span class="Other">(</span><span class="StringLit">&quot;RichEditText&quot;</span><span class="Other">,</span> <span class="Identifier">textobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="RichEditText,RichEditTextObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#RichEditText%2CRichEditTextObj"><span class="Identifier">RichEditText</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_edit_text.html#RichEditTextObj"><span class="Identifier">RichEditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new RichEditText pointer with default node name &quot;RichEditText&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichEditTextObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichEditTextObj</span>
-  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichEditText</span><span class="Other">(</span><span class="Identifier">textobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichEditText</span><span class="Other">(</span><span class="StringLit">&quot;RichEditText&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -305,9 +283,8 @@ Returns words under mouse.
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,RichEditTextPtr,RichEditTextObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CRichEditTextPtr%2CRichEditTextObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_edit_text.html#RichEditTextObj"><span class="Identifier">RichEditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CRichEditTextPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates RichEditText and create a new RichEditText pointer.
@@ -354,7 +331,7 @@ Changes RichEditText text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:28 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:30 UTC</small>
       </div>
     </div>
   </div>
