--- a/nodesnim/nodescontrol/rich_label.html
+++ b/nodesnim/nodescontrol/rich_label.html
@@ -121,10 +121,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#RichLabel%2Cstring%2CRichLabelObj"
-    title="RichLabel(name: string; variable: var RichLabelObj): RichLabelPtr"><wbr />Rich<wbr />Label<span class="attachedType">RichLabelPtr</span></a></li>
-  <li><a class="reference" href="#RichLabel%2CRichLabelObj"
-    title="RichLabel(obj: var RichLabelObj): RichLabelPtr"><wbr />Rich<wbr />Label<span class="attachedType">RichLabelObj</span></a></li>
+      <li><a class="reference" href="#RichLabel%2Cstring"
+    title="RichLabel(name: string = &quot;RichLabel&quot;): RichLabelPtr"><wbr />Rich<wbr />Label<span class="attachedType">RichLabelPtr</span></a></li>
 
   </ul>
 </li>
@@ -133,8 +131,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CRichLabelPtr%2CGLfloat%2CGLfloat"
     title="draw(self: RichLabelPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">RichLabelPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CRichLabelPtr%2CRichLabelObj"
-    title="duplicate(self: RichLabelPtr; obj: var RichLabelObj): RichLabelPtr"><wbr />duplicate<span class="attachedType">RichLabelPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CRichLabelPtr"
+    title="duplicate(self: RichLabelPtr): RichLabelPtr"><wbr />duplicate<span class="attachedType">RichLabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichLabelPtr%2CAnchorRef"
     title="setTextAlign(self: RichLabelPtr; align: AnchorRef)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">RichLabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichLabelPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
@@ -185,36 +183,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="RichLabel,string,RichLabelObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#RichLabel%2Cstring%2CRichLabelObj"><span class="Identifier">RichLabel</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_label.html#RichLabelObj"><span class="Identifier">RichLabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="RichLabel,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#RichLabel%2Cstring"><span class="Identifier">RichLabel</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;RichLabel&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new RichLabel pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichLabelObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichLabelObj</span>
-  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichLabel</span><span class="Other">(</span><span class="StringLit">&quot;RichLabel&quot;</span><span class="Other">,</span> <span class="Identifier">textobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="RichLabel,RichLabelObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#RichLabel%2CRichLabelObj"><span class="Identifier">RichLabel</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_label.html#RichLabelObj"><span class="Identifier">RichLabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new RichLabel pointer with default node name &quot;RichLabel&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichLabelObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichLabelObj</span>
-  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichLabel</span><span class="Other">(</span><span class="Identifier">textobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichLabel</span><span class="Other">(</span><span class="StringLit">&quot;RichLabel&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -230,9 +209,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,RichLabelPtr,RichLabelObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CRichLabelPtr%2CRichLabelObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_label.html#RichLabelObj"><span class="Identifier">RichLabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,RichLabelPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CRichLabelPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Richlabel object and create a new RichLabel pointer.
@@ -269,7 +247,7 @@ Changes RichLabel text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:28 UTC</small>
       </div>
     </div>
   </div>
