--- a/nodesnim/nodescontrol/slider.html
+++ b/nodesnim/nodescontrol/slider.html
@@ -120,10 +120,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Slider%2Cstring%2CSliderObj"
-    title="Slider(name: string; variable: var SliderObj): SliderPtr"><wbr />Slider<span class="attachedType">SliderPtr</span></a></li>
-  <li><a class="reference" href="#Slider%2CSliderObj"
-    title="Slider(obj: var SliderObj): SliderPtr"><wbr />Slider<span class="attachedType">SliderObj</span></a></li>
+      <li><a class="reference" href="#Slider%2Cstring"
+    title="Slider(name: string = &quot;Slider&quot;): SliderPtr"><wbr />Slider<span class="attachedType">SliderPtr</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +130,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CSliderPtr%2CGLfloat%2CGLfloat"
     title="draw(self: SliderPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">SliderPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CSliderPtr%2CSliderObj"
-    title="duplicate(self: SliderPtr; obj: var SliderObj): SliderPtr"><wbr />duplicate<span class="attachedType">SliderPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CSliderPtr"
+    title="duplicate(self: SliderPtr): SliderPtr"><wbr />duplicate<span class="attachedType">SliderPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CSliderPtr%2Cuint"
     title="setMaxValue(self: SliderPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">SliderPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CSliderPtr%2Cuint"
@@ -185,35 +183,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Slider,string,SliderObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Slider%2Cstring%2CSliderObj"><span class="Identifier">Slider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Slider,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Slider%2Cstring"><span class="Identifier">Slider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Slider&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Slider pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SliderObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">SliderObj</span>
-  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Slider</span><span class="Other">(</span><span class="StringLit">&quot;Slider&quot;</span><span class="Other">,</span> <span class="Identifier">scobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Slider,SliderObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Slider%2CSliderObj"><span class="Identifier">Slider</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Slider pointer with default node name &quot;Slider&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SliderObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">SliderObj</span>
-  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Slider</span><span class="Other">(</span><span class="Identifier">scobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Slider</span><span class="Other">(</span><span class="StringLit">&quot;Slider&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -229,9 +209,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,SliderPtr,SliderObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSliderPtr%2CSliderObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,SliderPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSliderPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Sider object and create a new Slider pointer.
@@ -276,7 +255,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:36 UTC</small>
       </div>
     </div>
   </div>
