--- a/nodesnim/nodescontrol/switch.html
+++ b/nodesnim/nodescontrol/switch.html
@@ -120,10 +120,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Switch%2Cstring%2CSwitchObj"
-    title="Switch(name: string; variable: var SwitchObj): SwitchPtr"><wbr />Switch<span class="attachedType">SwitchPtr</span></a></li>
-  <li><a class="reference" href="#Switch%2CSwitchObj"
-    title="Switch(obj: var SwitchObj): SwitchPtr"><wbr />Switch<span class="attachedType">SwitchObj</span></a></li>
+      <li><a class="reference" href="#Switch%2Cstring"
+    title="Switch(name: string = &quot;Switch&quot;): SwitchPtr"><wbr />Switch<span class="attachedType">SwitchPtr</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +130,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CSwitchPtr%2CGLfloat%2CGLfloat"
     title="draw(self: SwitchPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">SwitchPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CSwitchPtr%2CSwitchObj"
-    title="duplicate(self: SwitchPtr; obj: var SwitchObj): SwitchPtr"><wbr />duplicate<span class="attachedType">SwitchPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CSwitchPtr"
+    title="duplicate(self: SwitchPtr): SwitchPtr"><wbr />duplicate<span class="attachedType">SwitchPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CSwitchPtr%2CInputEvent%2CNodePtr"
     title="handle(self: SwitchPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">SwitchPtr</span></a></li>
   <li><a class="reference" href="#toggle.e%2CSwitchPtr"
@@ -181,35 +179,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Switch,string,SwitchObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Switch%2Cstring%2CSwitchObj"><span class="Identifier">Switch</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="switch.html#SwitchObj"><span class="Identifier">SwitchObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Switch,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Switch%2Cstring"><span class="Identifier">Switch</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Switch&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Switch pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SwitchObj variable</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">colorrect1_obj</span><span class="Other">:</span> <span class="Identifier">SwitchObj</span>
-  <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">Switch</span><span class="Other">(</span><span class="StringLit">&quot;Switch&quot;</span><span class="Other">,</span> <span class="Identifier">colorrect1_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Switch,SwitchObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Switch%2CSwitchObj"><span class="Identifier">Switch</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="switch.html#SwitchObj"><span class="Identifier">SwitchObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Switch pointer with default node name &quot;Switch&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SwitchObj variable</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">colorrect1_obj</span><span class="Other">:</span> <span class="Identifier">SwitchObj</span>
-  <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">Switch</span><span class="Other">(</span><span class="Identifier">colorrect1_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">colorrect1</span> <span class="Other">=</span> <span class="Identifier">Switch</span><span class="Other">(</span><span class="StringLit">&quot;Switch&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -225,9 +205,8 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,SwitchPtr,SwitchObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSwitchPtr%2CSwitchObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="switch.html#SwitchObj"><span class="Identifier">SwitchObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,SwitchPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSwitchPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="switch.html#SwitchPtr"><span class="Identifier">SwitchPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Switch object and create a new Switch pointer.
@@ -258,7 +237,7 @@ Toggles value.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:46 UTC</small>
       </div>
     </div>
   </div>
