--- a/nodesnim/nodescontrol/texture_button.html
+++ b/nodesnim/nodescontrol/texture_button.html
@@ -125,10 +125,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#TextureButton%2Cstring%2CTextureButtonObj"
-    title="TextureButton(name: string; variable: var TextureButtonObj): TextureButtonPtr"><wbr />Texture<wbr />Button<span class="attachedType">TextureButtonPtr</span></a></li>
-  <li><a class="reference" href="#TextureButton%2CTextureButtonObj"
-    title="TextureButton(obj: var TextureButtonObj): TextureButtonPtr"><wbr />Texture<wbr />Button<span class="attachedType">TextureButtonObj</span></a></li>
+      <li><a class="reference" href="#TextureButton%2Cstring"
+    title="TextureButton(name: string = &quot;TextureButton&quot;): TextureButtonPtr"><wbr />Texture<wbr />Button<span class="attachedType">TextureButtonPtr</span></a></li>
 
   </ul>
 </li>
@@ -137,8 +135,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CTextureButtonPtr%2CGLfloat%2CGLfloat"
     title="draw(self: TextureButtonPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">TextureButtonPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CTextureButtonPtr%2CTextureButtonObj"
-    title="duplicate(self: TextureButtonPtr; obj: var TextureButtonObj): TextureButtonPtr"><wbr />duplicate<span class="attachedType">TextureButtonPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CTextureButtonPtr"
+    title="duplicate(self: TextureButtonPtr): TextureButtonPtr"><wbr />duplicate<span class="attachedType">TextureButtonPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CTextureButtonPtr%2CInputEvent%2CNodePtr"
     title="handle(self: TextureButtonPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">TextureButtonPtr</span></a></li>
   <li><a class="reference" href="#setNormalTexture.e%2CTextureButtonPtr%2CGlTextureObj"
@@ -195,37 +193,18 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="TextureButton,string,TextureButtonObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#TextureButton%2Cstring%2CTextureButtonObj"><span class="Identifier">TextureButton</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_button.html#TextureButtonObj"><span class="Identifier">TextureButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="TextureButton,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#TextureButton%2Cstring"><span class="Identifier">TextureButton</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;TextureButton&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new TextureButton node pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureButtonObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">TextureButtonObj</span>
-  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">TextureButton</span><span class="Other">(</span><span class="StringLit">&quot;TextureButton&quot;</span><span class="Other">,</span> <span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="TextureButton,TextureButtonObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#TextureButton%2CTextureButtonObj"><span class="Identifier">TextureButton</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_button.html#TextureButtonObj"><span class="Identifier">TextureButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new TextureButton node pointer with default node name &quot;TextureButton&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureButtonObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">TextureButtonObj</span>
-  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">TextureButton</span><span class="Other">(</span><span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">TextureButton</span><span class="Other">(</span><span class="StringLit">&quot;TextureButton&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -241,9 +220,8 @@ function main() {
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,TextureButtonPtr,TextureButtonObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureButtonPtr%2CTextureButtonObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_button.html#TextureButtonObj"><span class="Identifier">TextureButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,TextureButtonPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureButtonPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonPtr"><span class="Identifier">TextureButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates TextureButton object and creates a new TextureButton node pointer.
@@ -291,7 +269,7 @@ Changes button texture, when it pressed.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:41 UTC</small>
       </div>
     </div>
   </div>
