--- a/nodesnim/nodescontrol/texture_progress_bar.html
+++ b/nodesnim/nodescontrol/texture_progress_bar.html
@@ -118,10 +118,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#TextureProgressBar%2Cstring%2CTextureProgressBarObj"
-    title="TextureProgressBar(name: string; variable: var TextureProgressBarObj): TextureProgressBarPtr"><wbr />Texture<wbr />Progress<wbr />Bar<span class="attachedType">TextureProgressBarPtr</span></a></li>
-  <li><a class="reference" href="#TextureProgressBar%2CTextureProgressBarObj"
-    title="TextureProgressBar(obj: var TextureProgressBarObj): TextureProgressBarPtr"><wbr />Texture<wbr />Progress<wbr />Bar<span class="attachedType">TextureProgressBarObj</span></a></li>
+      <li><a class="reference" href="#TextureProgressBar%2Cstring"
+    title="TextureProgressBar(name: string = &quot;TextureProgressBar&quot;): TextureProgressBarPtr"><wbr />Texture<wbr />Progress<wbr />Bar<span class="attachedType">TextureProgressBarPtr</span></a></li>
 
   </ul>
 </li>
@@ -130,8 +128,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CTextureProgressBarPtr%2CGLfloat%2CGLfloat"
     title="draw(self: TextureProgressBarPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">TextureProgressBarPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CTextureProgressBarPtr%2CTextureProgressBarObj"
-    title="duplicate(self: TextureProgressBarPtr; obj: var TextureProgressBarObj): TextureProgressBarPtr"><wbr />duplicate<span class="attachedType">TextureProgressBarPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CTextureProgressBarPtr"
+    title="duplicate(self: TextureProgressBarPtr): TextureProgressBarPtr"><wbr />duplicate<span class="attachedType">TextureProgressBarPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CTextureProgressBarPtr%2Cuint"
     title="setMaxValue(self: TextureProgressBarPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">TextureProgressBarPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CTextureProgressBarPtr%2Cuint"
@@ -181,37 +179,18 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="TextureProgressBar,string,TextureProgressBarObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#TextureProgressBar%2Cstring%2CTextureProgressBarObj"><span class="Identifier">TextureProgressBar</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_progress_bar.html#TextureProgressBarObj"><span class="Identifier">TextureProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="TextureProgressBar,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#TextureProgressBar%2Cstring"><span class="Identifier">TextureProgressBar</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;TextureProgressBar&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new TextureProgressBar pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureProgressBarObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">pobj</span><span class="Other">:</span> <span class="Identifier">TextureProgressBarObj</span>
-  <span class="Identifier">p</span> <span class="Other">=</span> <span class="Identifier">TextureProgressBar</span><span class="Other">(</span><span class="StringLit">&quot;TextureProgressBar&quot;</span><span class="Other">,</span> <span class="Identifier">pobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="TextureProgressBar,TextureProgressBarObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#TextureProgressBar%2CTextureProgressBarObj"><span class="Identifier">TextureProgressBar</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_progress_bar.html#TextureProgressBarObj"><span class="Identifier">TextureProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new TextureProgressBar pointer with default node name &quot;TextureProgressBar&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureProgressBarObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">pobj</span><span class="Other">:</span> <span class="Identifier">TextureProgressBarObj</span>
-  <span class="Identifier">p</span> <span class="Other">=</span> <span class="Identifier">TextureProgressBar</span><span class="Other">(</span><span class="Identifier">pobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">p</span> <span class="Other">=</span> <span class="Identifier">TextureProgressBar</span><span class="Other">(</span><span class="StringLit">&quot;TextureProgressBar&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -227,9 +206,9 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,TextureProgressBarPtr,TextureProgressBarObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureProgressBarPtr%2CTextureProgressBarObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_progress_bar.html#TextureProgressBarObj"><span class="Identifier">TextureProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
-    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,TextureProgressBarPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureProgressBarPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_progress_bar.html#TextureProgressBarPtr"><span class="Identifier">TextureProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates TextureProgressBar object and create a new TextureProgressBar pointer.
@@ -277,7 +256,7 @@ Changes background progress texture.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:39 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:42 UTC</small>
       </div>
     </div>
   </div>
