--- a/nodesnim/nodescontrol/vbox.html
+++ b/nodesnim/nodescontrol/vbox.html
@@ -117,10 +117,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#VBox%2Cstring%2CVBoxObj"
-    title="VBox(name: string; variable: var VBoxObj): VBoxPtr"><wbr />VBox<span class="attachedType">VBoxPtr</span></a></li>
-  <li><a class="reference" href="#VBox%2CVBoxObj"
-    title="VBox(obj: var VBoxObj): VBoxPtr"><wbr />VBox<span class="attachedType">VBoxObj</span></a></li>
+      <li><a class="reference" href="#VBox%2Cstring"
+    title="VBox(name: string = &quot;VBox&quot;): VBoxPtr"><wbr />VBox<span class="attachedType">VBoxPtr</span></a></li>
 
   </ul>
 </li>
@@ -133,8 +131,8 @@ function main() {
     title="addChild(self: VBoxPtr; child: NodePtr)"><wbr />add<wbr />Child<span class="attachedType">VBoxPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CVBoxPtr%2CGLfloat%2CGLfloat"
     title="draw(self: VBoxPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">VBoxPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CVBoxPtr%2CVBoxObj"
-    title="duplicate(self: VBoxPtr; obj: var VBoxObj): VBoxPtr"><wbr />duplicate<span class="attachedType">VBoxPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CVBoxPtr"
+    title="duplicate(self: VBoxPtr): VBoxPtr"><wbr />duplicate<span class="attachedType">VBoxPtr</span></a></li>
   <li><a class="reference" href="#resize.e%2CVBoxPtr%2CGLfloat%2CGLfloat"
     title="resize(self: VBoxPtr; w, h: GLfloat)"><wbr />resize<span class="attachedType">VBoxPtr</span></a></li>
 
@@ -177,35 +175,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="VBox,string,VBoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#VBox%2Cstring%2CVBoxObj"><span class="Identifier">VBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbox.html#VBoxObj"><span class="Identifier">VBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="VBox,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#VBox%2Cstring"><span class="Identifier">VBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;VBox&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new VBox pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VBoxObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">boxobj</span><span class="Other">:</span> <span class="Identifier">VBoxObj</span>
-  <span class="Identifier">box</span> <span class="Other">=</span> <span class="Identifier">VBox</span><span class="Other">(</span><span class="StringLit">&quot;VBox&quot;</span><span class="Other">,</span> <span class="Identifier">boxobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="VBox,VBoxObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#VBox%2CVBoxObj"><span class="Identifier">VBox</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbox.html#VBoxObj"><span class="Identifier">VBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new VBox pointer with default node name &quot;VBox&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VBoxObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">boxobj</span><span class="Other">:</span> <span class="Identifier">VBoxObj</span>
-  <span class="Identifier">box</span> <span class="Other">=</span> <span class="Identifier">VBox</span><span class="Other">(</span><span class="Identifier">boxobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">box</span> <span class="Other">=</span> <span class="Identifier">VBox</span><span class="Other">(</span><span class="StringLit">&quot;VBox&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -239,8 +219,8 @@ Returns size of all children.
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,VBoxPtr,VBoxObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVBoxPtr%2CVBoxObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbox.html#VBoxObj"><span class="Identifier">VBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,VBoxPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVBoxPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vbox.html#VBoxPtr"><span class="Identifier">VBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicate VBox object and create a new VBox pointer.
@@ -268,7 +248,7 @@ Duplicate VBox object and create a new VBox pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:23 UTC</small>
       </div>
     </div>
   </div>
