--- a/nodesnim/nodescontrol/vslider.html
+++ b/nodesnim/nodescontrol/vslider.html
@@ -120,10 +120,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#VSlider%2Cstring%2CVSliderObj"
-    title="VSlider(name: string; variable: var VSliderObj): VSliderPtr"><wbr />VSlider<span class="attachedType">VSliderPtr</span></a></li>
-  <li><a class="reference" href="#VSlider%2CVSliderObj"
-    title="VSlider(obj: var VSliderObj): VSliderPtr"><wbr />VSlider<span class="attachedType">VSliderObj</span></a></li>
+      <li><a class="reference" href="#VSlider%2Cstring"
+    title="VSlider(name: string = &quot;VSlider&quot;): VSliderPtr"><wbr />VSlider<span class="attachedType">VSliderPtr</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +130,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CVSliderPtr%2CGLfloat%2CGLfloat"
     title="draw(self: VSliderPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">VSliderPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CVSliderPtr%2CVSliderObj"
-    title="duplicate(self: VSliderPtr; obj: var VSliderObj): VSliderPtr"><wbr />duplicate<span class="attachedType">VSliderPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CVSliderPtr"
+    title="duplicate(self: VSliderPtr): VSliderPtr"><wbr />duplicate<span class="attachedType">VSliderPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CVSliderPtr%2Cuint"
     title="setMaxValue(self: VSliderPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">VSliderPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CVSliderPtr%2Cuint"
@@ -185,35 +183,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="VSlider,string,VSliderObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#VSlider%2Cstring%2CVSliderObj"><span class="Identifier">VSlider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="VSlider,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#VSlider%2Cstring"><span class="Identifier">VSlider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;VSlider&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new VSlider pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VSliderObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">sliderobj</span><span class="Other">:</span> <span class="Identifier">VSliderObj</span>
-  <span class="Identifier">slider</span> <span class="Other">=</span> <span class="Identifier">VSlider</span><span class="Other">(</span><span class="StringLit">&quot;VSlider&quot;</span><span class="Other">,</span> <span class="Identifier">sliderobj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="VSlider,VSliderObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#VSlider%2CVSliderObj"><span class="Identifier">VSlider</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new VSlider pointer with default node name &quot;VSlider&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VSliderObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">sliderobj</span><span class="Other">:</span> <span class="Identifier">VSliderObj</span>
-  <span class="Identifier">slider</span> <span class="Other">=</span> <span class="Identifier">VSlider</span><span class="Other">(</span><span class="Identifier">sliderobj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">slider</span> <span class="Other">=</span> <span class="Identifier">VSlider</span><span class="Other">(</span><span class="StringLit">&quot;VSlider&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -229,9 +209,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,VSliderPtr,VSliderObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVSliderPtr%2CVSliderObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,VSliderPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVSliderPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates VSlider object and create a new VSlider pointer.
@@ -276,7 +255,7 @@ handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 10:24:35 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-30 14:01:37 UTC</small>
       </div>
     </div>
   </div>
