--- a/nodesnim/nodes/node.html
+++ b/nodesnim/nodes/node.html
@@ -97,7 +97,8 @@ function main() {
     </select>
   </div>
   <ul class="simple simple-toc" id="toc-list">
-<li>
+<ul class="simple"><li><a class="reference" id="examples_toc" href="#examples">Examples</a></li>
+</ul><li>
   <a class="reference reference-toplevel" href="#6" id="56">Imports</a>
   <ul class="simple simple-toc-section">
     
@@ -215,6 +216,14 @@ function main() {
     title="show(self: NodePtr)"><wbr />show<span class="attachedType">NodePtr</span></a></li>
   <li><a class="reference" href="#delete.e%2CNodePtr"
     title="delete(self: NodePtr)"><wbr />delete<span class="attachedType">NodePtr</span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#%40.m%2CNodePtr%2Cuntyped%2Cuntyped"
+    title="`@`(node: NodePtr; event_name, code: untyped): untyped"><wbr />`@`<span class="attachedType">NodePtr</span></a></li>
 
   </ul>
 </li>
@@ -586,6 +595,33 @@ Deletes current node.
 </dd>
 
 </dl></div>
+<div class="section" id="17">
+<h1><a class="toc-backref" href="#17">Macros</a></h1>
+<dl class="item">
+<a id="@.m,NodePtr,untyped,untyped"></a>
+<dt><pre><span class="Keyword">macro</span> <a href="#%40.m%2CNodePtr%2Cuntyped%2Cuntyped"><span class="Identifier">`@`</span></a><span class="Other">(</span><span class="Identifier">node</span><span class="Other">:</span> <a href="node.html#NodePtr"><span class="Identifier">NodePtr</span></a><span class="Other">;</span> <span class="Identifier">event_name</span><span class="Other">,</span> <span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+<p>It provides a convenient wrapper for the event handler.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">node</span></tt> is an any node pointer.</li>
+<li><tt class="docutils literal"><span class="pre">event_name</span></tt> is an event name, e.g.: process.</li>
+<li><tt class="docutils literal"><span class="pre">code</span></tt> is the proc code.</li>
+</ul>
+
+<h2><a class="toc-backref" id="examples" href="#examples">Examples</a></h2><pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">smth_node</span> <span class="Operator">=</span> <span class="Identifier">Node</span><span class="Punctuation">(</span><span class="StringLit">&quot;Simple node&quot;</span><span class="Punctuation">)</span>
+
+<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">ready</span><span class="Punctuation">:</span>
+  <span class="Identifier">echo</span> <span class="StringLit">&quot;node is ready!&quot;</span>
+
+<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">input</span><span class="Punctuation">(</span><span class="Identifier">event</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+  <span class="Keyword">if</span> <span class="Identifier">event</span><span class="Operator">.</span><span class="Identifier">isInputEventMouseButton</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+    <span class="Identifier">echo</span> <span class="Identifier">event</span></pre>
+
+</dd>
+
+</dl></div>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
@@ -606,7 +642,7 @@ This used in childs of the NodeObj.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 04:25:46 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 06:52:16 UTC</small>
       </div>
     </div>
   </div>
