--- a/nodesnim/nodescontrol/label.html
+++ b/nodesnim/nodescontrol/label.html
@@ -122,8 +122,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Label%2Cstring"
-    title="Label(name: string = &quot;Label&quot;): LabelPtr"><wbr />Label<span class="attachedType">LabelPtr</span></a></li>
+      <li><a class="reference" href="#Label%2Cstring%2Cstring"
+    title="Label(name: string = &quot;Label&quot;; text: string = &quot;&quot;): LabelPtr"><wbr />Label<span class="attachedType">LabelPtr</span></a></li>
 
   </ul>
 </li>
@@ -185,8 +185,8 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Label,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Label%2Cstring"><span class="Identifier">Label</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Label&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Label,string,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Label%2Cstring%2Cstring"><span class="Identifier">Label</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Label&quot;</span><span class="Other">;</span> <span class="Identifier">text</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Label pointer.</p>
@@ -249,7 +249,7 @@ Changes Label text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:26:56 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:44:55 UTC</small>
       </div>
     </div>
   </div>
